docs/resume/resume.css
:root {
  --fontfamily-sans: 'Open Sans', sans-serif;
  --fontfamily-serif: 'Noto Serif', serif;
  --color-accent: #4BACC6;
  --color-text: #333;
  --color-neutral-light: #fff;
  --color-neutral-mid: #ccc;
  --color-neutral-dark: #666;
}

html {
  font-size: 16px;
  font-family: var(--fontfamily-sans);
  line-height:1.4;
}

body {
  max-width:100ch;
  margin:0 auto;
  padding:2rem 2rem 2rem;
  background-color:var(--color-neutral-light);
  color: var(--color-text);
  box-sizing:border-box;
}
*, *:before, *:after {
  box-sizing:inherit;
}

.fontserif {
  font-family:var(--fontfamily-serif);
}
.fontsans {
  font-family:var(--fontfamily-sans);
}

main {
  font-size: 0.95rem;
}

h1 {
  border-bottom:1px solid var(--color-text);
  padding-bottom:0.5rem;
  margin:0 0 1rem;
  text-align:center;
  text-transform:uppercase;
  font-weight:700;
  font-size:1.5em;
  letter-spacing:-0.7px;
}

h2 {
  padding:0.5rem;
  margin:1.5rem 0 0.5rem;
  background-color:var(--color-neutral-mid);
  text-align:center;
  text-transform:uppercase;
  font-size:1em;
  font-weight:600;

  &.hilite {
    background-color:var(--color-accent);
    color:var(--color-neutral-light);
  }
}

h3 {
  font-size:1.25em;
  font-weight:700;
}

a, a:link, a:active, a:visited {
  color: var(--color-accent);
  text-decoration:none;
}

p {
  margin:0 0 0.5rem;
}

ul {
  margin:0.5rem 0;
  padding: 0 0 0 1.5rem;
}

li {
  margin-bottom:0.5rem;
}


/* ::::: Content */
ul.contact {
  display:flex;
  flex-flow:row wrap;
  justify-content: center;
  margin:0;
  padding:0;
  font-weight:600;
  font-size:1em;

  & li {
    list-style:none;
    white-space:nowrap;
    margin: 0;

    + li::before {
      content: "|";
      padding: 0 0.5rem;
      color:var(--color-neutral-mid);
    }
  }

  & a {
    display:inline-block;
  }
}

ul.summary {
  margin:0;
  padding:0;
  font-style:italic;
  font-family: var(--fontfamily-serif);

  & li {
    list-style:none;
    display:inline;
    position:relative;

    + li {
      padding-left:1.5rem;
    }

    + li::before {
      content: '';
      height: 0.4rem;
      width: 0.4rem;
      display: block;
      background: var(--color-neutral-dark);
      border-radius: 50%;
      position: absolute;
      top: 0.5rem;
      left: 6px;
    }
  }
}

.experience {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  grid-template-areas:
    "header-title"
    "header-date"
    "details";
  margin:0 0 2rem;

  & h3 {
    grid-area: header-title;
    margin: 0;
  }

  .duration {
    grid-area: header-date;
    font-weight:600;
  }

  .details {
    grid-area: details;
    margin:1rem 0 0;
  }

  & strong {
    font-weight: 600;
  }
}

@media print, screen and (min-width: 600px) {
  .experience {
    grid-template-columns: 2fr 1fr;
    grid-template-areas:
      "header-title header-date"
      "details details";

    .duration {
      justify-self: end;
      margin-left: 0.5em;
      font-size:1.1em;
    }

    .details {
      margin:1rem 1rem 0;
    }
  }
}

